--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
